--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -7,6 +7,7 @@ ul {
 .nav li {
     border: solid blue;
     padding: 0 3rem;
-    font-family: Red Rose;
+    font-family: Red Rose, cursive;
+
 }
 
