--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,10 @@
   width: 90%;
   margin: auto;
 }
-
+img {
+  max-width: 100%;
+  height: auto;
+}
 .theme-color-bg {
   background-color: #A02279;
   color: white;
