--- a/src/styles/banner.css
+++ b/src/styles/banner.css
@@ -1,7 +1,10 @@
 .banner-section {
     display: flex;
-    align-items: stretch;
-    /* flex-direction: column; */
+    margin-top: 6rem;
+    margin-bottom: 4rem;
+}
+#banner-main-text-div{
+    margin-bottom: 2rem;
 }
 #banner-center-div{
     margin-bottom: 0rem;
@@ -23,14 +26,20 @@
 .banner-text {
     font-size: 3rem;
     font-family: 'Red Rose';
-    margin-top: 1rem;
+    margin-top: 0rem;
+    margin-bottom: 0rem;
 }
 #banner-input-div {
     margin-top: 1rem;
 }
 #banner-input-div #searchBox {
     border: 1px solid #A3A3A3;
-    padding: 0.5rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    padding-right: 3.5rem;
+    padding-left: 1rem;
+    border-bottom-left-radius: 5px;
+    border-top-left-radius: 5px;
 }
 
 #banner-input-div #searchBtn {
