--- a/src/styles/nextadventuresection.css
+++ b/src/styles/nextadventuresection.css
@@ -3,6 +3,10 @@
     margin: auto;
     width: 90%;
 }
+.nextAdvSection h1{
+    color: black;
+    margin-top: 3rem;
+}
 .nextAdvSectionGrid{
     display: grid;
     grid-template-columns: auto auto auto auto;
@@ -12,7 +16,6 @@
     padding: 1rem;
     border: 1px solid #D7D7D7;
     border-radius: 15px;
-
 }
 .text-bold{
     font: bolder;
