--- a/src/styles/banner.css
+++ b/src/styles/banner.css
@@ -1,5 +1,6 @@
 .banner-section {
     display: flex;
+    justify-content: space-around;
     margin-top: 6rem;
     margin-bottom: 4rem;
 }
@@ -11,14 +12,11 @@
     margin-top: 0rem;
 }
 #left-div {
-    width: 60%;
     display: flex;
     flex-direction: column;
     align-items: stretch;
 }
-#right-div {
-    width: 40%;
-}
+
 
 .text-purple {
     color: #A02279;
@@ -47,4 +45,16 @@
     padding: 0.5rem 3rem;
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
+}
+
+@media screen and (max-width: 480px) {
+    .banner-section{
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+    }
+    #right-div{
+        margin-top: 2rem;
+    }
+    
 }
