--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -3,10 +3,9 @@
 }
 .footer-sub-div{
     align-items: center;
-    /* padding-left: 5rem; */
-    /* padding-right: 5rem;  */
     margin: auto;
     padding-bottom: 2rem;
+    flex-wrap: wrap;
 }
 
 .first-section{
@@ -27,7 +26,4 @@
     color: #94959a;
     font-size: 10px;
     padding: 0.25rem 0rem;
-}
-img {
-
 }
