--- a/src/styles/nftsection.css
+++ b/src/styles/nftsection.css
@@ -21,3 +21,9 @@
     margin-bottom: 2rem;
     color: #d7caca;
 }
+
+#nft-img-div img{
+    max-width: 100%;
+    height: auto;
+    object-fit: contain;
+}
